--- a/apps/mix-cms/src/app/components/portal-hub/portal-hub.component.html
+++ b/apps/mix-cms/src/app/components/portal-hub/portal-hub.component.html
@@ -3,7 +3,7 @@
                     colorTop="var(--tui-error-fill)">
   <mix-button type="outline"
               [iconBtn]="true"
-              [size]="'m'"
+              [size]="'s'"
               (click)="toggle(true)"><span class="material-symbols-outlined text-xl">
       notifications_active
     </span></mix-button>
