--- a/apps/mix-cms/src/app/pages/portal/module/module.component.html
+++ b/apps/mix-cms/src/app/pages/portal/module/module.component.html
@@ -1,24 +1,19 @@
-<div *ngIf="store.data$()"
+<div *ngIf="store.vm$ | async as state"
      class="data-table-page">
   <div class="data-table-page__main-container">
-    <mix-sub-toolbar *ngIf="store.state() as state"
-                     [description]="'LISTING'"
+    <mix-sub-toolbar [description]="'LISTING'"
                      [title]="'All Modules'">
       <div class="toolbar-separator"></div>
       <mix-button (click)="addNew()"
-                  size="m"><span class="material-symbols-outlined"> add </span>&nbsp; Add New
-        Module</mix-button>
+                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp; Add</mix-button>
       <div class="toolbar-separator"></div>
-      <mix-button class="mr-1"
-                  type="secondary-danger"
+      <mix-button type="secondary-danger"
                   [disabled]="!selectedPages.length"
-                  size="m">
-        <span class="material-symbols-outlined"> delete </span>&nbsp; Delete
-        Module(s)</mix-button>
+                  size="s">
+        <span class="material-symbols-outlined"> delete </span>&nbsp; Delete(s)</mix-button>
     </mix-sub-toolbar>
 
-    <div *ngIf="store.state$ | async as state"
-         class="data-table-page__body">
+    <div class="data-table-page__body">
       <mix-data-table [contextMenus]="contextMenus"
                       [dataset]="state.data"
                       [loading]="state.status === 'Loading'"
