feat(): update progressbar

--- a/apps/mix-cms/src/styles.scss
+++ b/apps/mix-cms/src/styles.scss
@@ -5,6 +5,7 @@
 @import './assets/styles/shares/page-detail.scss';
 @import './assets/styles/material-symbol.scss';
 @import './assets/styles/font.scss';
+@import './assets/styles/progress-bar.scss';
 
 @import 'node_modules/@ngneat/hot-toast/src/styles/styles.scss';
 @import '~jsoneditor/dist/jsoneditor.min.css';
