--- a/libs/mix-ui/src/data-table/data-table.component.html
+++ b/libs/mix-ui/src/data-table/data-table.component.html
@@ -56,12 +56,10 @@
               </th>
             </ng-container>
 
-
             <th *tuiHead="'MENU'"
                 [sorter]="null"
                 [sticky]="true"
-                tuiTh>
-            </th>
+                tuiTh></th>
           </tr>
         </thead>
 
@@ -108,9 +106,8 @@
                 tuiTd>
               <mix-button type="outline"
                           [iconBtn]="true"
-                          size="s"> <span class="mix-icon">
-                  more_horiz
-                </span></mix-button>
+                          size="s">
+                <span class="mix-icon"> more_horiz </span></mix-button>
             </td>
           </tr>
         </tbody>
@@ -165,15 +162,15 @@
     </tui-loader>
   </div>
 
-  <progress *ngIf="loading && !!dataset.length"
-            class="progress"
-            tuiProgressBar
-            size="s"
-            max="100"></progress>
+  <div *ngIf="loading && !!dataset.length"
+       class="mix-progress-bar">
+    <div class="mix-progress-bar-value"></div>
+  </div>
 
   <div class="mix-data-table__footer">
     <div class="mix-data-table__page-info">
-      Total items: <strong>{{ pageInfo.total || '--' }}</strong> &nbsp; Page size: <strong>{{ pageInfo.pageSize || '0' }}</strong>
+      Total items: <strong>{{ pageInfo.total || '--' }}</strong> &nbsp; Page
+      size: <strong>{{ pageInfo.pageSize || '0' }}</strong>
     </div>
 
     <tui-pagination *ngIf="!!pageInfo?.totalPage"
