feat(): update progressbar

--- a/apps/mix-cms/src/assets/styles/progress-bar.scss
+++ b/apps/mix-cms/src/assets/styles/progress-bar.scss
@@ -1,5 +1,6 @@
 .mix-progress-bar {
   height: 5px;
+  min-height: 5px;
   background-color: rgba(255, 255, 255, 0.3);
   width: 100%;
   overflow: hidden;
