--- a/apps/mix-cms/src/assets/styles/shares/page-detail.scss
+++ b/apps/mix-cms/src/assets/styles/shares/page-detail.scss
@@ -4,7 +4,6 @@
   position: relative;
   --wallpaper-height: 300px;
   background-color: var(--background-color-primary);
-  // border-radius: var(--border-radius-default);
   border-top-left-radius: 12px;
   border-bottom-left-radius: 12px;
   border: 1px solid var(--border-color-default);
@@ -91,6 +90,9 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
+    -webkit-box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
+    -moz-box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
   }
 
   &__content {
