--- a/libs/mix-ui/src/portal-sidebar/portal-sidebar.component.html
+++ b/libs/mix-ui/src/portal-sidebar/portal-sidebar.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="selectedPortal"
      class="portal-sidebar">
+  <div class="portal-sidebar__backdrop"
+       (click)="portalSideBar.close()">
+  </div>
 
   <div *ngIf="selectedPortal"
        class="portal-sidebar__main"
        @slideInRightOnEnter>
-    <ng-template [cdkPortalOutlet]="selectedPortal"
-                 t></ng-template>
+    <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template>
   </div>
 </div>
