feat: update create table

--- a/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
@@ -84,13 +84,22 @@
             <mix-text-area placeHolder="Description"
                            formControlName="description"></mix-text-area>
 
-            <tui-notification class="mt-3">
+            <tui-notification class="mt-3"
+                              status="warning">
               Default system fields:
               <span class="text-highlight">id</span>,
               <span class="text-highlight">createdAt</span>,
               <span class="text-highlight">createdBy</span>,
               <span class="text-highlight">updatedAt</span>,
               <span class="text-highlight">priority</span>
+
+              <br>
+              <br>
+
+              Visit
+              <a href="https://docs.mixcore.org/"
+                 target="_blank">Here</a> to
+              get more information how Mixcore Database work.
             </tui-notification>
           </div>
         </ng-container>
