--- a/apps/mix-cms/src/app/components/entity-form/entity-form.component.html
+++ b/apps/mix-cms/src/app/components/entity-form/entity-form.component.html
@@ -1,20 +1,19 @@
 <div class="entity-form"
      [formGroup]="form">
   <div class="row">
-    <div class="col-3">
-      <p class="content-label">Display Name</p>
-      <mix-input [size]="'l'"
+    <div class="col-3 d-flex align-items-center gap-2">
+      <span class="mix-icon">drag_indicator</span>
+
+      <mix-input [size]="'s'"
                  formControlName="displayName"></mix-input>
     </div>
 
     <div class="col-3">
-      <p class="content-label">System Name</p>
-      <mix-input [size]="'l'"
+      <mix-input [size]="'s'"
                  formControlName="systemName"></mix-input>
     </div>
 
     <div class="col-3">
-      <p class="content-label">Data Type</p>
       <mix-select [items]="$any(dataTypes)"
                   [size]="'s'"
                   formControlName="dataType"></mix-select>
@@ -22,13 +21,16 @@
   </div>
 
   <div class="entity-form__action">
-    <mix-button type="danger"
-                [iconBtn]="true"><span class="material-symbols-outlined">
-        delete
-      </span></mix-button>
     <mix-button [iconBtn]="true"
-                (click)="showDialog(template)"><span class="material-symbols-outlined">
+                (click)="showDialog(template)"
+                size="s"><span class="material-symbols-outlined">
         settings
+      </span></mix-button>
+
+    <mix-button type="outline"
+                [iconBtn]="true"
+                size="s"><span class="material-symbols-outlined">
+        delete
       </span></mix-button>
   </div>
 </div>
@@ -44,8 +46,6 @@
     <button tuiTab><span class="material-symbols-outlined">
         settings
       </span>&nbsp; Default Value </button>
-
-
   </nav>
 
   <div class="mt-8"
