--- a/apps/mix-cms/src/assets/styles/material-symbol.scss
+++ b/apps/mix-cms/src/assets/styles/material-symbol.scss
@@ -6,6 +6,13 @@
   src: url('../fonts/mat-symbol-400.woff2') format('woff2');
 }
 
+@font-face {
+  font-family: 'Material Symbols Outlined';
+  font-style: normal;
+  font-weight: 200;
+  src: url('../fonts/mat-symbol-200.woff2') format('woff2');
+}
+
 .material-symbols-outlined {
   font-family: 'Material Symbols Outlined';
   font-weight: normal;
